--- a/.env.local.template
+++ b/.env.local.template
@@ -3,4 +3,5 @@ AWS_REGION=us-east-1
 
 # Anthropic API Key for question answering
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
+GOOGLE_API_KEY=your_google_api_kay_here
 MISTRAL_API_KEY=your_mistral_api_kay_here
