--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.57.0",
     "@aws-sdk/client-textract": "^3.855.0",
+    "@google-cloud/documentai": "^9.3.0",
+    "@google/genai": "^1.12.0",
     "@mistralai/mistralai": "^1.7.5",
     "next": "15.4.4",
     "pdf-lib": "^1.17.1",
